--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Jah Chaisangmongkon"
 title_separator          : "-"
 name                     : &name "JahChaisangmongkon"
 description              : &description "A Machine Learning Scientist."
-url                      : https://mmistakes.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "/minimal-mistakes" # the subpath of your site, e.g. "/blog"
-repository               : "mmistakes/minimal-mistakes"
+url                      : https://jahchaisang.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : "/datascience" # the subpath of your site, e.g. "/blog"
+repository               : "jahchaisang/datascience"
 teaser                   : # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
