--- a/_config.yml
+++ b/_config.yml
@@ -178,6 +178,9 @@ collections:
   portfolio:
     output: true
     permalink: /:collection/:path/
+  projects:
+    output: true
+    permalink: /:collection/:path/
 
 
 # Defaults
