--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,20 +21,17 @@ foo:
 
 # main links links
 main:
-  - title: "Quick-Start Guide"
-    url: /docs/quick-start-guide/
-
   - title: "About"
     url: /about/
 
-  - title: "Sample Posts"
-    url: /year-archive/
+  - title: "Projects"
+    url: /projects/
 
-  - title: "Sample Collections"
-    url: /collection-archive/
+  - title: "Courses"
+    url: /courses/
 
-  - title: "Terms &amp; Privacy Policy"
-    url: /terms/
+  - title: "Knowledgebase"
+    url: /knowledgebase/
 
 
 # documentation links
