--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,6 +24,9 @@ main:
   - title: "About"
     url: /about/
 
+  - title: "People"
+    url: /people/
+
   - title: "Projects"
     url: /projects/
 
